fix: move collapse margin rule to right files

--- a/src/components/Collapse/index.scss
+++ b/src/components/Collapse/index.scss
@@ -5,7 +5,6 @@
   position: relative;
   background-color: $gray;
   border-radius: 5px;
-  margin-bottom: 20px;
   &__header {
     font-weight: 500;
     font-size: 13px;
